# rhinoPaths

./: .cursorrules  .gitignore  CHANGELOG.md  LICENSE  README.md  build.sh  manifest.yml  pyproject.toml  rhinoPaths.rhproj
.agents/workflows/: debug_with_mcp.md  rhinocode_build_rules.md
.cursor/: mcp.json
definitions/: README.md
scripts/: build_yak.sh  create_template_3dm.py  generate_gh_plugin.py  generate_icons.py
src/: sample_grasshopper_component.py
src/components/: cutout_component.py  dogbone_component.py  drill_component.py  engrave_component.py  feedrate_component.py  gcode_previewer_component.py  install_component.py  pass_depths_component.py  pocket_component.py  postprocessor_component.py  test_component.py
src/gh_components/: __init__.py  _bootstrap.py  cutout.py  definitions.py  rhinoPaths_components.gh  rhinoPaths_components_test.gh
src/ghuser_components/: rhinoPaths_Cutout.ghuser  rhinoPaths_Dogbone.ghuser  rhinoPaths_Drill.ghuser  rhinoPaths_Engrave.ghuser  rhinoPaths_Feedrate.ghuser  rhinoPaths_G-Code_Preview.ghuser  rhinoPaths_Pass_Depths.ghuser  rhinoPaths_Pocket.ghuser  rhinoPaths_PostProcessor.ghuser
src/rhinopaths/: __init__.py  dogbone.py  feedrate.py  geometry.py  offset.py  postprocessor.py  toolpaths.py  units.py
tests/: test_dogbone.py  test_feedrate.py  test_geometry.py  test_postprocessor.py  test_toolpaths.py
tests/fixtures/: README.md
